changed home bg

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "http://colleowino.github.io"
 twitter_username: colleowino
 github_username: colleowino 
 facebook_username:  colleowino
-header-img: img/home-bg.jpg
+header-img: img/home-new.jpg
 
 # Build settings
 markdown: kramdown
