--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter_username: colleowino
 github_username: colleowino 
 facebook_username:  colleowino
 header-img: img/home-new.jpg
-title: "Kole"
+title: "colleowino"
 
 # Dependencies
 markdown: redcarpet
