--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ github_username: colleowino
 facebook_username:  colleowino
 header-img: img/home-new.jpg
 title: "colleowino"
+tagline: "ship it, now!"
 
 # Dependencies
 markdown: redcarpet
