switched to rouge highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ tagline: "ship it, now!"
 
 # Dependencies
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 #permalinks
 permalink: pretty
