--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
+gems: [jekyll-paginate]
+
 #stop crashing
 version: 2.1.0
 github: 
