--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 highlighter: rouge
 
 #permalinks
-permalink: pretty
+permalink: /:title
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
