enabled disqus commenting

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ tagline: "ship it, now!"
 avatar: profile.jpg
 email: colleowino@gmail.com
 linkedin: colleowino
+disqus: colleowino
 stackoverflow: users/2998272/colleowino 
 resume: https://docs.google.com/document/d/1SEBx_ONTJIgrzVNOGIAET8Udkb0njEiQiP0irxn-Rf8/edit?usp=sharing
 
