--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,8 @@ url: "http://colleowino.github.io"
 twitter_username: colleowino
 github_username: colleowino 
 facebook_username:  colleowino
-header-img: img/home-new.jpg
+header-img: img/home-new.
 title: "colleowino"
-job: Web | Mobile | Applications Developer 
-ask: Currently looking for new opportunities
 tagline: "ship it, now!"
 avatar: profile.jpg
 email: colleowino@gmail.com
