using source sans pro

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter_username: colleowino
 github_username: colleowino 
 facebook_username:  colleowino
 header-img: img/home-new.
-title: "colleowino"
+title: "Cliff Owino"
 tagline: "ship it, now!"
 avatar: profile.jpg
 email: colleowino@gmail.com
