--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,11 @@ permalink: /:title
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-gems: [jekyll-paginate, jekyll-seo-tag, jekyll-auto-image]
+#gems: [jekyll-paginate, jekyll-seo-tag, jekyll-auto-image]
+gems:
+  - jekyll-auto-image
+  - jekyll-paginate
+  - jekyll-seo-tag
 
 pygments_options:
   tabsize: 2
