--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ linkedin: colleowino
 disqus: colleowino
 stackoverflow: users/2998272/colleowino 
 resume: https://docs.google.com/document/d/1gTh5Gj49bI1z2NRl6BaJIRT-6YoK3ivP2jSY6yQ4B-Q/edit?usp=sharing
-image: /img/post-sample-image.jpg
+image: /img/place-holder.jpg
 
 # Dependencies
 markdown: kramdown
