--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 #gems: [jekyll-paginate, jekyll-seo-tag, jekyll-auto-image]
-gems:
+plugins:
   - jekyll-auto-image
   - jekyll-paginate
   - jekyll-seo-tag
