--- a/_config.yml
+++ b/_config.yml
@@ -42,5 +42,5 @@ github:
 repo: https://github.com/colleowino
 url: colleowino.com
 author:
-  name: 'colle owino'
+  name: 'cliff owino'
   url: https://twitter.com/colleowino
