--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ permalink: /:title
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-#gems: [jekyll-paginate, jekyll-seo-tag, jekyll-auto-image]
 plugins:
   - jekyll-auto-image
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-youtube
 
 pygments_options:
   tabsize: 2
